kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: node-app
  labels:
    name: node-app
