kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: node-app
  labels:
    run: node-app
spec:
  ports:
  - port: 8081
    protocol: TCP
  selector:
    app: node-app
