kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-app-ingress
  namespace: node-app
spec:
  backend:
    serviceName: node-app
    servicePort: 8081
